primer_commit